@@ -35,6 +35,7 @@ TESTS = Test-auth-basic-fail.py			\
 	Test-auth-no-challenge.py		\
 	Test-auth-no-challenge-url.py		\
 	Test-auth-retcode.py			\
+	Test-auth-with-content-disposition.py	\
 	Test-c-full.py				\
 	Test-Content-disposition-2.py		\
 	Test-Content-disposition.py 		\
